# smart_agenda

./: Dockerfile  README.md  docker-compose.yml
backend/: README.md  api.py  pyproject.toml  requirements.txt
backend/src/journal/: crew.py  main.py
backend/src/journal/config/: agents.yaml  tasks.yaml
backend/src/translator/: main.py
frontend/: index.html  script.js  style.css
